<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GratuityCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="basic_pay_per_month_str">Basic Pay (per month)</string>
    <string name="dearness_allowance_str">Dearness Allowance(D.A)</string>
    <string name="no_of_years_of_service_str">No. of Years of Service</string>
    <string name="select_str">Select</string>
    <string name="calculate_str">Calculate</string>
<string-array name="array">
    <item>5</item>
    <item>6</item>
    <item>7</item>
    <item>8</item>
    <item>9</item>
    <item>10</item>
    <item>11</item>
    <item>12</item>
</string-array>
    <string name="copy_str">Copy</string>
    <string name="gratuity_calculator_title_str">Gratuity Calculator</string>
    <string name="zero_str">0</string>
    <string name="months_str">Months</string>
    <string name="min_service_years">5</string>
</resources>