<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".GratuityCalcActivity" >

    <TextView
        style="@style/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/gratuity_calculator_title_str"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/basic_pay_per_month_str"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/basic_pay"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@string/zero_str" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dearness_allowance_str"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/da"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@string/zero_str" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_of_years_of_service_str"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/years"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@string/min_service_years"
                        />
                </TableRow>
               
               <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/months_str"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/months"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@string/zero_str"
                        />
                </TableRow>
                
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="left" >

                    <TextView
                        android:id="@+id/gratuity_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:visibility="invisible"
                        android:layout_span ="2"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="left" >

                    <Button
                        android:id="@+id/calc_button"
                        style="@style/okButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/ok_custom_button"
                        android:text="@string/calculate_str"
                        android:textAppearance="?android:attr/textAppearanceMedium" 
                        android:onClick="calculateGratuity"/>

                    <Button
                        android:id="@+id/copy_button"
                        style="@style/copyButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/copy_custom_button"
                        android:text="@string/copy_str"
                        android:textAppearance="?android:attr/textAppearanceMedium" 
                        android:onClick="copyGratuity"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>